# Mamba-Orin-Nano-Custom-S6-CUDA

./: .gitignore  API_DOCUMENTATION.md  BUG_ANALYSIS.md  CMakeLists.txt  INFERENCE_README.md  README.md  api_server.py  benchmark_performance.py  debug_weights.py  mac_mamba_block.py  makefile  mamba2_metal.py  mamba_block_mock.py  mamba_inference_benchmark.py  mamba_metal_benchmark.py  mamba_metal_model.py  profile_optimized.prof  profile_output.prof  run_inference.py  run_mamba2_metal_inference.py  run_mamba2_mlx.py  show.py  test_correctness.py
docs/: perf_tasks_metal.md
frontend/: DESIGN_GUIDE.md  GPU_WIDGET.md  README.md
frontend/app/: globals.css  layout.tsx
frontend/components/: ChatInterface.tsx  GPUWidget.tsx  MemoryChart.tsx  MessageItem.tsx  MetricsPanel.tsx  QualityMetrics.tsx  SpeedChart.tsx  TopKCandidates.tsx
frontend/lib/: api.ts
frontend/types/: api.ts
metal_ops/: README.md  __init__.py  causal_conv1d_metal.py  chunk_scan_metal.py  dispatch_utils.py  mamba_bmm_wrapper.py  mamba_engine.py  metal_utils.py  rmsnorm_metal.py  selective_state_update_metal.py  swiglu_metal.py
src/: mac_main.py  mamba_model.py  mamba_ops.py
src/kernel/: mamba_s6_kernel.cu
src/mamba2_mlx/: __init__.py  config.py  generation.py  model.py  modules.py  utils.py
src/metal/: mamba_advanced.metal  mamba_bmm.metal  mamba_s6.metal  mamba_ssd.metal  mamba_ssm.metal  mamba_ssm_full.metal  mamba_step.metal  mamba_swiglu.metal
src/plugin/: MambaS6Plugin.cpp  MambaS6Plugin.h
test/: test_mamba2_inference.py  test_mamba2_metal.py
